--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <div class="col-lg-8 col-md-12 col-12 d-flex align-items-center">
                     <div class="about-text">
                         <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
-                        <h2 class="animated animated-text">
-                          <span class="mr-2">Hey folks, I'm</span>
-                          <div class="animated-info">
+                        <h2 class="animated animated-text col-12 mobile-mb">
+                          <span class="pl-5 col-lg-5 col-md-5 col-12">Hey folks, I'm</span>
+                          <div class="animated-info col-lg-7 col-md-7 col-12">
                               <span class="animated-item">Vigneshwaran</span>
                               <span class="animated-item">Full Stack Developer</span>
                               <span class="animated-item">ASP.NET Core Enthusiast</span>
