--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <!-- <p>Building a successful product is a challenge. I am highly energetic in user experience design, interfaces and web development.</p> -->
                         <p>I have a extencive experience in developing web applications using the .NET framework, specializing in both frontend and backend development. Skilled in c#, ASP .NET Core and MySql. I create scalable and efficient applications with user-friendly interfaces and robust back-end systems. I am commited to continious learning and delevering innovative software solutions that meet client needs and exceed expectations.</p>                   
                         <div class="custom-btn-group mt-4">
-                          <a href="assets/VIGNESHWARAN.pdf" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
+                          <a href="assets/VIGNESHWARAN - Full Stack Developer - Resume.pdf" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
                           <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
                         </div>
                     </div>
